MB-28212 reared its ugly head again - fix issue where horizontal node spacing was too tightin the query plan visualiation.
Also discovered a bug where the node coloring for node cost was set
incorrectly.

Finally fix an issue where tooltips were not showing up in the right
vertical location.

Reviewed-on: http://review.couchbase.org/92082
Tested-by: Eben Haber <eben@couchbase.com>

--- a/query-ui/ui-current/query.css
+++ b/query-ui/ui-current/query.css
@@ -193,7 +193,7 @@ input.ng-invalid-number {
   fill: #fdedd3;
 }
 .wb-explain-node-expensive-2 {
-  fill: #fbebd7;
+  fill: #fbf593;
 }
 .wb-explain-node-expensive-1 {
   fill: #f9ca7b;
